--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "verify:guidelines": "tsx scripts/verify-guidelines.ts"
   },
   "dependencies": {
     "@clerk/backend": "^1.33.1",
@@ -38,6 +39,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
