--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "verify:guidelines": "tsx scripts/verify-guidelines.ts"
+    "type-check": "tsc --noEmit",
+    "verify:guidelines": "tsx scripts/verify-guidelines.ts",
+    "verify:env": "tsx scripts/verify-env.ts",
+    "verify:all": "pnpm verify:env && pnpm verify:guidelines && pnpm type-check"
   },
   "dependencies": {
     "@clerk/backend": "^1.33.1",
